@@ -1,4 +1,7 @@
 iRedMail-0.8.2:
+    * Add checkpoint setting in OpenLDAP for data recovery, used to define
+      the time between BDB checkpoint operations. Default is whenever 128kb
+      data bytes written or 5 minutes has elapsed whichever occurs first.
     * Rotate Dovecot log files on OpenBSD and FreeBSD.
     * Allow to use attribute domainGlobalAdmin for mail user.
     * Fixed:
